<resources>
    <string name="app_name">Event and Guest</string>
    <string name="type_name_here">Type name here</string>
    <string name="next">Next</string>
    <string name="choose_guest">Choose Guest</string>
    <string name="choose_event">Choose Event</string>
    <string name="image_description">image description</string>
    <string name="palindrome_checker">Palindrome Checker</string>
    <string name="not_palindrome">not palindrome</string>
    <string name="isPalindrome">isPalindrome</string>
    <string name="palindrome_check">Palindrome Check</string>
    <string name="check">check</string>
    <string name="prime_number_month_check">Prime number month check</string>
    <string name="prime_message">The month number is a prime number</string>
    <string name="not_prime_message">The month number is not a prime number</string>
    <string name="prime_checker">Prime Checker</string>
    <string name="month_not_valid">The month number you entered is not valid. Month number must be greater than 0 and less than 13</string>
    <string name="mont_number_null">Please enter the month number first</string>
    <string name="no_connection_message">It seems like your device is not connected to internet. Please try again later.</string>
    <string name="selamat_datang">Selamat Datang!</string>
    <string name="sertakan_gambar_profil_anda_untuk_melengkapi_profil">Sertakan gambar profil Anda untuk melengkapi profil.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla viverra pharetra velit ac vulputate. Phasellus molestie ipsum sit amet ex gravida, tempor rhoncus libero tempor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam suscipit finibus nunc eu hendrerit.</string>
</resources>
