<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:orientation="vertical"
    android:background="@drawable/bg_validation"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selamat_datang"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sertakan_gambar_profil_anda_untuk_melengkapi_profil"
        android:textColor="@android:color/white"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:layout_gravity="center" />

    <ImageButton
        android:id="@+id/img_profile"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/btn_add_photo"
        android:background="@null"
        android:contentDescription="@string/image_description"/>


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:autofillHints="Please type your name here"
        android:hint="@string/type_name_here"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:background="@drawable/main_button_bg"
        android:text="@string/next" />

    <EditText
        android:id="@+id/edit_palindrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:autofillHints="Please type your palindrome sentence here"
        android:hint="@string/palindrome_check"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_check_palindrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:background="@drawable/main_button_bg"
        android:text="@string/check" />

</LinearLayout>